## Makefile.am -- Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = no-dependencies
EXTRA_DIST = $(M4)
MAINTAINERCLEANFILES = Makefile.in

M4 = ac_check_package.m4 ac_compilation_environment.m4 ac_compilation_options.m4 ac_func_nanosleep.m4 \
	  ost_cxx.m4 ost_debug.m4 ost_dynamic.m4 ost_endian.m4 ost_getopt.m4 ost_maint.m4 ost_misc.m4 ost_poll.m4 ost_posix.m4 \
	  ost_prog.m4 ost_pthread.m4 ost_reentrant.m4 ost_signal.m4 ost_socket.m4 ost_stlport.m4 ost_string.m4 ost_systime.m4 \
	  ost_types.m4 ost_win32.m4 siginfo.si_addr.m4 socket_SO_RCVTIMEO.m4 ac_cxx_old_iostream.m4 ac_try_flag.m4 ac_fallocate.m4

SOURCES = $(M4)
